--- a/paper.tex
+++ b/paper.tex
@@ -128,17 +128,8 @@ Size & Size \\
 
 We selected 13 properties from AAIndex database~\citep{2008kawashimaaaindex} (see Table~\ref{tab:aaprop}), each attributed to a single criterion. We established 96 permutations of the properties, where each permutation contains only one property associated with a given criterion. Considering all permutations of properties, we created 96 possible clusterings of amino acids using Euclidean distance and Ward's method. Further, we cut the clusterings to create four-group encodings. As expected, some encodings (31\%) were identical.
 
-\begin{figure}[ht]\centering
-\includegraphics[width=0.9\textwidth]{figures/cvres.png}
-\caption{Results of cross-validation. 1. An encoding providing the best sensitivity (AUC = 0.9346, MCC = 0.6479). 3. An encoding providing the best specificity (AUC = 0.9687, MCC = 0.8689).}
-\label{fig:cvres}
-\end{figure}
-
 To compare encodings we performed a 5-fold cross-validation training a new instance of signalHsmm on every encoding. We created balanced data sets by subsampling a number of proteins without a signal peptide equal to the number of proteins with signal peptide.
 The analysis was carried using also redundant encodings, but results are not shown (HSMM is a deterministic algorithm and predictions for identical groupings of amino acids were the same). The cross-validation was repeated XXX times, to ensure that every negative protein was tested at least once with XXX probability.
-
-As the performance measure interest we choose
-
 
 \subsection*{Hidden semi-Markov model}
 Hidden semi-Markov model (HSMM) is an extension of popular method  hidden Markov model (HMM).
@@ -313,6 +304,46 @@ XXX n-grams were further used in the analysis
 
 \subsection*{Cross-validation}
 
+\begin{figure}[ht]\centering
+\includegraphics[width=0.9\textwidth]{figures/cvres.png}
+\caption{Results of cross-validation. 1. An encoding providing the best sensitivity (AUC = 0.9687, MCC = 0.8689). 2. An encoding providing the best specificity (AUC = 0.9346, MCC = 0.6479).}
+\label{fig:cvres}
+\end{figure}
+
+We used four performance measures to evaluate results of cross-validation: specificity, sensitivity, Matthew's Correlation Coefficient ($\phi$ coefficient) and Area Under the Curve (AUC). All encodings provide very good AUC (0.93 -- 0.97) and specificity (0.92 -- 0.96). The encodings have the biggest impact on sensitivity, which ranges from 0.66 to 0.94. The final signalHsmm algorithm uses the encoding, that yields the highest specificity and Matthew's Correlation coefficient as well as the second best AUC (see Fig.~\ref{fig:cvres}).
+
+\begin{table}[ht]
+\begin{minipage}{.5\linewidth} 
+\centering
+\begin{tabular}{l}
+  \toprule
+Groups \\ 
+  \midrule
+A, E, K, Q, R \\ 
+   \rowcolor[gray]{0.85}D, G, N, P, S, T \\ 
+  C, H, I, L, M, V \\ 
+   \rowcolor[gray]{0.85}F, W, Y \\ 
+   \bottomrule
+\end{tabular}
+\caption{Best-sensitivity (final) encoding} 
+\label{tab:best}
+\end{minipage}
+\begin{minipage}{.5\linewidth} 
+\centering
+\begin{tabular}{l}
+  \toprule
+Groups \\ 
+  \midrule
+A, C \\ 
+   \rowcolor[gray]{0.85}D, E, H, K, N, Q, R \\ 
+  G, P, S, T, Y \\ 
+   \rowcolor[gray]{0.85}F, I, L, M, V, W \\ 
+   \bottomrule
+\end{tabular}
+\caption{Best-specificity encoding} 
+\label{tab:worst}
+\end{minipage}
+\end{table}
 
 
 \section*{Discussion}
