addded enccomp figure

--- a/paper.tex
+++ b/paper.tex
@@ -325,7 +325,7 @@ A, E, K, Q, R \\
    \rowcolor[gray]{0.85}F, W, Y \\ 
    \bottomrule
 \end{tabular}
-\caption{Best-sensitivity (final) encoding} 
+\caption{Best-sensitivity (final) encoding.} 
 \label{tab:best}
 \end{minipage}
 \begin{minipage}{.5\linewidth} 
@@ -334,17 +334,23 @@ A, E, K, Q, R \\
   \toprule
 Groups \\ 
   \midrule
-A, C \\ 
-   \rowcolor[gray]{0.85}D, E, H, K, N, Q, R \\ 
-  G, P, S, T, Y \\ 
-   \rowcolor[gray]{0.85}F, I, L, M, V, W \\ 
+D, E, H, K, N, Q, R \\ 
+   \rowcolor[gray]{0.85}G, P, S, T, Y \\ 
+  F, I, L, M, V, W \\ 
+   \rowcolor[gray]{0.85}A, C \\ 
    \bottomrule
 \end{tabular}
-\caption{Best-specificity encoding} 
+\caption{Worst-sensitivity encoding.} 
 \label{tab:worst}
 \end{minipage}
 \end{table}
 
+
+\begin{figure}[ht]\centering
+\includegraphics[width=0.9\textwidth]{figures/enccomp.png}
+\caption{A comparision of encodings.}
+\label{fig:enccomp}
+\end{figure}
 
 \section*{Discussion}
 
