--- a/paper.tex
+++ b/paper.tex
@@ -333,7 +333,7 @@ A, E, K, Q, R \\
    \rowcolor[gray]{0.85}F, W, Y \\ 
    \bottomrule
 \end{tabular}
-\caption{Best-sensitivity (final) encoding.} 
+\caption{The best sensitivity (final) encoding.} 
 \label{tab:best}
 \end{minipage}
 \begin{minipage}{.5\linewidth} 
@@ -348,7 +348,7 @@ D, E, H, K, N, Q, R \\
    \rowcolor[gray]{0.85}A, C \\ 
    \bottomrule
 \end{tabular}
-\caption{Worst-sensitivity encoding.} 
+\caption{The worst sensitivity encoding.} 
 \label{tab:worst}
 \end{minipage}
 \end{table}
@@ -356,7 +356,7 @@ D, E, H, K, N, Q, R \\
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.9\textwidth]{figures/enccomp.png}
-\caption{A comparision of encodings.}
+\caption{A comparision of encodings. A) Properties of amino acids in the best sensitivity encoding. B) Properties of amino acids in the worst sensitivity encoding.}
 \label{fig:enccomp}
 \end{figure}
 
