improved comparision of encodings

--- a/paper.tex
+++ b/paper.tex
@@ -356,7 +356,7 @@ D, E, H, K, N, Q, R \\
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.9\textwidth]{figures/enccomp.png}
-\caption{A comparision of encodings. A) Properties of amino acids in the best sensitivity encoding. B) Properties of amino acids in the worst sensitivity encoding.}
+\caption{A comparision of encodings. A) Properties of amino acids in the best and the worst sensitivity encoding. B) Frequencies of amino acids beloning to the encodings in regions of signal peptide and mature protein.}
 \label{fig:enccomp}
 \end{figure}
 
