--- a/paper.tex
+++ b/paper.tex
@@ -320,7 +320,9 @@ XXX n-grams were further used in the analysis
 
 We used four performance measures to evaluate results of cross-validation: specificity, sensitivity, Matthew's Correlation Coefficient ($\phi$ coefficient) and Area Under the Curve (AUC). All encodings provide very good AUC (0.93 -- 0.97) and specificity (0.92 -- 0.96). The encodings have the biggest impact on sensitivity, which ranges from 0.66 to 0.94. The final signalHsmm algorithm uses the encoding, that yields the highest specificity and Matthew's Correlation coefficient as well as the second best AUC (see Fig.~\ref{fig:cvres}).
 
-The best and the worst encoding share some similarities. The both groupings have strongly pronounced highly hydrophobic group 3 (see Table~\ref{tab:best}, Table~\ref{tab:best} and Figure~\ref{fig:enccomp}.
+The best and the worst encoding share some similarities. In both cases Group 1 tends to contain polar 
+
+The both groupings have strongly pronounced non-polar and highly hydrophobic group 3 (see Table~\ref{tab:best}, Table~\ref{tab:best} and Figure~\ref{fig:enccomp}) containing isoleucine, leucine, methionine and valine.
 
 \begin{table}[ht]
 \begin{minipage}{.5\linewidth} 
